juri overflow fix

--- a/source/sass/blocks/juri.scss
+++ b/source/sass/blocks/juri.scss
@@ -46,10 +46,15 @@
 .juri__image-wrapper {
   margin: 0;
   position: relative;
+  background-color: rgb($dark-cerulean-blue, 0.8);
 }
 
 .juri__image-container {
   display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
 }
 
 .juri__image {
@@ -63,6 +68,18 @@
   }
 }
 
+.juri__description {
+  position: relative;
+  z-index: 1;
+  width: 227px;
+  padding: 234px 20px 24px;
+
+  @media (min-width: $tablet-width) {
+    width: 260px;
+    padding: 254px 20px 24px;
+  }
+}
+
 .juri__name {
   font-family: $general-font;
   font-size: 22px;
@@ -70,15 +87,7 @@
   line-height: 22px;
   color: $white;
   text-align: center;
-  position: absolute;
-  left: 50%;
-  bottom: 25px;
-  transform: translateX(-50%);
-  width: 177px;
-
-  @media (min-width: $tablet-width) {
-    bottom: 24px;
-  }
+  margin: 0;
 }
 
 .juri__controls {
